--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~5.0.0-beta.0",
-    "@vue/cli-plugin-eslint": "~5.0.0-beta.0",
-    "@vue/cli-plugin-router": "~5.0.0-beta.0",
-    "@vue/cli-plugin-typescript": "~5.0.0-beta.0",
-    "@vue/cli-plugin-vuex": "~5.0.0-beta.0",
-    "@vue/cli-service": "~5.0.0-beta.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-standard": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^7.20.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
